Bug 597774. Make sure to invalidate when inserting the root view of a document when it is coming out of the bfcache. r=roc,bz a=roc